--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
             <tr>
                 <td>
                     <div>
-                        <label>Enter code here</label>
+                        <label>Enter Code Here</label>
                     </div>
                 </td>
                 <td>
                     <div>
-                        <label>Parsed code here</label>
+                        <label>Vector Input Here</label>
+                    </div>
+                </td>
+                <td>
+                    <div>
+                        <label>The Resulting Graph</label>
                     </div>
                 </td>
             </tr>
@@ -42,7 +47,12 @@
                 </td>
                 <td>
                     <div class="textAreaWrapper">
-                        <textarea id="parsedCode" title="Parse code"></textarea>
+                        <textarea id="vectorInput" title="Enter input here"></textarea>
+                    </div>
+                </td>
+                <td>
+                    <div id="here" class="textAreaWrapper">
+
                     </div>
                 </td>
             </tr>
